all images except mac address

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -33,104 +33,185 @@
 
 
 <h2 id="kinds-of-phones">Telephone Hardware and Parts Descriptions</h2>
-<h3>Model 7942G</h3>
-<p>This phone is the standard phone for full-time faculty and staff.</p>
- 
-<ul>
-  <li>Two-line set</li>
-  <li>Hands free speakerphone</li>
-  <li>Large LCD display</li>
-  <li>Headset jack</li>
-  <li>Volume control</li>
-  <li>Message waiting light</li>
-</ul>
 
-<h3>Model 7945G</h3>
 
-<ul>
-  <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
-  <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
-  <li>Improved navigation cluster for easier navigation and feature and function selection</li>
-  <li>Gigabit Ethernet connectivity</li>
-</ul>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
+      <img class="media-object" src="/images/tso/7942g.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Model 7942G</h3>
+    <p>This phone is the standard phone for full-time faculty and staff.</p>
+      <ul>
+        <li>Two-line set</li>
+        <li>Hands free speakerphone</li>
+        <li>Large LCD display</li>
+        <li>Headset jack</li>
+        <li>Volume control</li>
+        <li>Message waiting light</li>
+      </ul>
+  </div>
+</div>
 
-<h3>Model 7962G</h3>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
+      <img class="media-object" src="/images/tso/7945g.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Model 7945G</h3>
+    <ul>
+      <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
+      <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
+      <li>Improved navigation cluster for easier navigation and feature and function selection</li>
+      <li>Gigabit Ethernet connectivity</li>
+    </ul>
+  </div>
+</div>
 
-<ul>
-  <li>Six-line set</li>
-  <li>Hands free speakerphone</li>
-  <li>Large LCD display</li>
-  <li>Headset jack</li>
-  <li>Volume control</li>
-  <li>Message waiting light</li>
-</ul>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
+      <img class="media-object" src="/images/tso/7962g.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Model 7962G</h3>
+    <ul>
+      <li>Six-line set</li>
+      <li>Hands free speakerphone</li>
+      <li>Large LCD display</li>
+      <li>Headset jack</li>
+      <li>Volume control</li>
+      <li>Message waiting light</li>
+    </ul>
+  </div>
+</div>
 
-<h3>Model 7965G</h3>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
+      <img class="media-object" src="/images/tso/7965g.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Model 7965G</h3>
+    <ul>
+      <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
+      <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
+      <li>Improved navigation cluster for easier navigation and feature and function selection</li>
+      <li>Gigabit Ethernet connectivity</li>
+    </ul>
+  </div>
+</div>
 
-<ul>
-  <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
-  <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
-  <li>Improved navigation cluster for easier navigation and feature and function selection</li>
-  <li>Gigabit Ethernet connectivity</li>
-</ul>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
+      <img class="media-object" src="/images/tso/8831.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Cisco Unified IP Conference Phone 8831</h3>
+    <ul>
+      <li>Hands free speakerphone</li>
+      <li>Full duplex</li>
+      <li>Suitable for small to medium sized conference rooms</li>
+      <li>Larger conference rooms may require daisy-chaining of base units (up to two maximum)</li>
+      <li>Ethernet 10/100</li>
+      <li>SIP</li>
+      <li>Supports 2 External Wired or Wireless Microphones</li>
+      <li>1 Year Warranty</li>
+    </ul>
+  </div>
+</div>
 
-<h3>Cisco Unified IP Conference Phone 8831</h3>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="#">
+      <img class="media-object" src="/images/tso/handset_cord.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Handset Cord</h3>
+    <ul>
+      <li>2 FT Coiled 12 Ft Uncoiled</li>
+      <li>RJ22</li>
+      <li>Gold Plated Contacts</li>
+      <li>PVC Jacket</li>
+      <li>UL Listed</li>
+      <li>Medium Gray</li>
+    </ul>
+  </div>
+</div>
 
-<ul>
-  <li>Hands free speakerphone</li>
-  <li>Full duplex</li>
-  <li>Suitable for small to medium sized conference rooms</li>
-  <li>Larger conference rooms may require daisy-chaining of base units (up to two maximum)</li>
-  <li>Ethernet 10/100</li>
-  <li>SIP</li>
-  <li>Supports 2 External Wired or Wireless Microphones</li>
-  <li>1 Year Warranty</li>
-</ul>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="#">
+      <img class="media-object" src="/images/tso/7914_expansion.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Model 7914 Expansion Module</h3>
+    <ul>
+      <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
+      <li>Includes new base and power cord</li>
+      <li>Up to two expansion modules can be added to a 7960</li>
+      <li>Model 7937 must be ordered from the vendor</li>
+    </ul>
+  </div>
+</div>
 
-<h3>Handset Cord</h3>
- 
-<ul>
-  <li>2 FT Coiled 12 Ft Uncoiled</li>
-  <li>RJ22</li>
-  <li>Gold Plated Contacts</li>
-  <li>PVC Jacket</li>
-  <li>UL Listed</li>
-  <li>Medium Gray</li>
-</ul>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="#">
+      <img class="media-object" src="/images/tso/se1500.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Linksys SE1500 5 Port Fast Ethernet Switch</h3>
+    <ul>
+      <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
+      <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
+      <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
+    </ul>
+  </div>
+</div>
 
-<h3>Model 7914 Expansion Module</h3>
 
-<ul>
-  <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
-  <li>Includes new base and power cord</li>
-  <li>Up to two expansion modules can be added to a 7960</li>
-  <li>Model 7937 must be ordered from the vendor</li>
-</ul>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="#">
+      <img class="media-object" src="/images/tso/handset.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Cisco Unified Wideband Handset</h3>
+    <ul>
+      <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
+      <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
+    </ul>
+  </div>
+</div>
 
-<h3>Linksys SE1500 5 Port Fast Ethernet Switch</h3>
 
-<ul>
-  <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
-  <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
-  <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
-</ul>
-
-<h3>Cisco Unified Wideband Handset</h3>
-
-<ul>
-  <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
-  <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
-</ul>
-
-<h3>Power Supply</h3>
-
-<ul>
-  <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
-  <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
-</ul>
-
-<h3>MAC Address Location</h3>
-<p>The MAC Address can be located on the bottom of your Cisco Phone. The MAC Address sticker will be designated by the work MAC in a raised format next to the correct sticker. The MAC address is always a 12 digit sequence.</p>
+<div class="media">
+  <div class="media-left media-top">
+    <a href="#">
+      <img class="media-object" src="/images/tso/power_supply.png">
+    </a>
+  </div>
+  <div class="media-body">
+    <h3 class="media-heading">Power Supply</h3>
+    <ul>
+      <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
+      <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
+    </ul>
+  </div>
+</div>
 
 
 <h2 id="phone-services">Hardware and Service Pricing, Telephone Services Rates</h2>
@@ -283,19 +364,19 @@
 <tbody>
 <!-- Accessories / Spare - New Phones / Parts -->
   <tr>
-    <td>Cisco 7942</td>
+    <td>Cisco 7942G</td>
     <td>$219.00</td>
   </tr>
   <tr>
-    <td>Cisco 7945</td>
+    <td>Cisco 7945G</td>
     <td>$260.00</td>
   </tr>
   <tr>
-    <td>Cisco 7962</td>
+    <td>Cisco 7962G</td>
     <td>$260.00</td>
   </tr>
   <tr>
-    <td>Cisco 7965</td>
+    <td>Cisco 7965G</td>
     <td>$333.00</td>
   </tr>
   <tr>
@@ -307,7 +388,7 @@
     <td>$22.00</td>
   </tr>
   <tr>
-    <td>Handset cords</td>
+    <td>Handset Cord</td>
     <td>$3.99</td>
   </tr>
   <tr>
