naughty no no updating master again

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -38,7 +38,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-      <img class="media-object" src="/images/tso/7942g.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/7942g.png">
     </a>
   </div>
   <div class="media-body">
@@ -58,7 +58,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
-      <img class="media-object" src="/images/tso/7945g.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/7945g.png">
     </a>
   </div>
   <div class="media-body">
@@ -75,7 +75,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
-      <img class="media-object" src="/images/tso/7962g.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/7962g.png">
     </a>
   </div>
   <div class="media-body">
@@ -94,7 +94,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
-      <img class="media-object" src="/images/tso/7965g.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/7965g.png">
     </a>
   </div>
   <div class="media-body">
@@ -111,7 +111,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
-      <img class="media-object" src="/images/tso/8831.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/8831.png">
     </a>
   </div>
   <div class="media-body">
@@ -132,7 +132,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="#">
-      <img class="media-object" src="/images/tso/handset_cord.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/handset_cord.png">
     </a>
   </div>
   <div class="media-body">
@@ -151,7 +151,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="#">
-      <img class="media-object" src="/images/tso/7914_expansion.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/7914_expansion.png">
     </a>
   </div>
   <div class="media-body">
@@ -168,7 +168,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="#">
-      <img class="media-object" src="/images/tso/se1500.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/se1500.png">
     </a>
   </div>
   <div class="media-body">
@@ -185,7 +185,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="#">
-      <img class="media-object" src="/images/tso/handset.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/handset.png">
     </a>
   </div>
   <div class="media-body">
@@ -201,7 +201,7 @@
 <div class="media">
   <div class="media-left media-top">
     <a href="#">
-      <img class="media-object" src="/images/tso/power_supply.png">
+      <img class="img-responsive" class="media-object" src="/images/tso/power_supply.png">
     </a>
   </div>
   <div class="media-body">
