test fix for image left

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -36,11 +36,11 @@
 
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-      <img class="img-responsive" class="media-object" src="/images/tso/7942g.png">
+    <img class="pull-left img-responsive" class="media-object" src="/images/tso/7942g.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Model 7942G</h3>
     <p>This phone is the standard phone for full-time faculty and staff.</p>
