test fix for image left

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -43,6 +43,7 @@
   <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Model 7942G</h3>
+    <hr>
     <p>This phone is the standard phone for full-time faculty and staff.</p>
       <ul>
         <li>Two-line set</li>
@@ -56,9 +57,9 @@
 </div>
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
-      <img class="img-responsive" class="media-object" src="/images/tso/7945g.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/7945g.png" style="max-width: 33.33%">
     </a>
   </div>
   <div class="media-body">
@@ -73,11 +74,11 @@
 </div>
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
-      <img class="img-responsive" class="media-object" src="/images/tso/7962g.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/7962g.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Model 7962G</h3>
     <ul>
@@ -92,11 +93,11 @@
 </div>
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
-      <img class="img-responsive" class="media-object" src="/images/tso/7965g.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/7965g.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Model 7965G</h3>
     <ul>
@@ -109,11 +110,11 @@
 </div>
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
-      <img class="img-responsive" class="media-object" src="/images/tso/8831.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/8831.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Cisco Unified IP Conference Phone 8831</h3>
     <ul>
@@ -130,11 +131,11 @@
 </div>
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="#">
-      <img class="img-responsive" class="media-object" src="/images/tso/handset_cord.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset_cord.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Handset Cord</h3>
     <ul>
@@ -149,11 +150,11 @@
 </div>
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="#">
-      <img class="img-responsive" class="media-object" src="/images/tso/7914_expansion.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/7914_expansion.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Model 7914 Expansion Module</h3>
     <ul>
@@ -166,11 +167,11 @@
 </div>
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="#">
-      <img class="img-responsive" class="media-object" src="/images/tso/se1500.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/se1500.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Linksys SE1500 5 Port Fast Ethernet Switch</h3>
     <ul>
@@ -183,11 +184,11 @@
 
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="#">
-      <img class="img-responsive" class="media-object" src="/images/tso/handset.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Cisco Unified Wideband Handset</h3>
     <ul>
@@ -199,11 +200,11 @@
 
 
 <div class="media">
-  <div class="media-left media-top">
+  <!-- <div class="media-left media-top"> -->
     <a href="#">
-      <img class="img-responsive" class="media-object" src="/images/tso/power_supply.png">
+      <img class="pull-left img-responsive" class="media-object" src="/images/tso/power_supply.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Power Supply</h3>
     <ul>
