--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -34,16 +34,15 @@
 
 <h2 id="kinds-of-phones">Telephone Hardware and Parts Descriptions</h2>
 
-
+<h3>Model 7942G</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/7942g.png" style="max-width: 33.33%">
     </a>
   <!-- </div> -->
-  <div class="media-body">
-    <h3 class="media-heading">Model 7942G</h3>
-    <hr>
+  <div class="media-body">   
     <p>This phone is the standard phone for full-time faculty and staff.</p>
       <ul>
         <li>Two-line set</li>
@@ -61,7 +60,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
       <img class="pull-left img-responsive" class="media-object" src="/images/tso/7945g.png" style="max-width: 33.33%">
     </a>
-  </div>
+  <!-- </div> -->
   <div class="media-body">
     <h3 class="media-heading">Model 7945G</h3>
     <ul>
