--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -35,6 +35,7 @@
 <h2 id="kinds-of-phones">Telephone Hardware and Parts Descriptions</h2>
 
 <h3>Model 7942G</h3>
+<p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
@@ -43,7 +44,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">   
-    <p>This phone is the standard phone for full-time faculty and staff.</p>
       <ul>
         <li>Two-line set</li>
         <li>Hands free speakerphone</li>
@@ -55,14 +55,15 @@
   </div>
 </div>
 
+<h3>Model 7945G</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
       <img class="pull-left img-responsive" class="media-object" src="/images/tso/7945g.png" style="max-width: 33.33%">
     </a>
   <!-- </div> -->
-  <div class="media-body">
-    <h3 class="media-heading">Model 7945G</h3>
+  <div class="media-body"> 
     <ul>
       <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
       <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
@@ -72,6 +73,8 @@
   </div>
 </div>
 
+<h3>Model 7962G</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
@@ -79,7 +82,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">
-    <h3 class="media-heading">Model 7962G</h3>
     <ul>
       <li>Six-line set</li>
       <li>Hands free speakerphone</li>
@@ -91,14 +93,15 @@
   </div>
 </div>
 
+<h3>Model 7965G</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
       <img class="pull-left img-responsive" class="media-object" src="/images/tso/7965g.png" style="max-width: 33.33%">
     </a>
   <!-- </div> -->
-  <div class="media-body">
-    <h3 class="media-heading">Model 7965G</h3>
+  <div class="media-body"> 
     <ul>
       <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
       <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
@@ -108,6 +111,8 @@
   </div>
 </div>
 
+<h3>Cisco Unified IP Conference Phone 8831</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
@@ -115,7 +120,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">
-    <h3 class="media-heading">Cisco Unified IP Conference Phone 8831</h3>
     <ul>
       <li>Hands free speakerphone</li>
       <li>Full duplex</li>
@@ -129,6 +133,8 @@
   </div>
 </div>
 
+<h3>Handset Cord</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="#">
@@ -136,7 +142,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">
-    <h3 class="media-heading">Handset Cord</h3>
     <ul>
       <li>2 FT Coiled 12 Ft Uncoiled</li>
       <li>RJ22</li>
@@ -148,6 +153,8 @@
   </div>
 </div>
 
+<h3>Model 7914 Expansion Module</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="#">
@@ -155,7 +162,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">
-    <h3 class="media-heading">Model 7914 Expansion Module</h3>
     <ul>
       <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
       <li>Includes new base and power cord</li>
@@ -165,6 +171,8 @@
   </div>
 </div>
 
+<h3>Linksys SE1500 5 Port Fast Ethernet Switch</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="#">
@@ -172,7 +180,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">
-    <h3 class="media-heading">Linksys SE1500 5 Port Fast Ethernet Switch</h3>
     <ul>
       <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
       <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
@@ -181,7 +188,8 @@
   </div>
 </div>
 
-
+<h3>Cisco Unified Wideband Handset</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="#">
@@ -189,7 +197,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">
-    <h3 class="media-heading">Cisco Unified Wideband Handset</h3>
     <ul>
       <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
       <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
@@ -197,7 +204,8 @@
   </div>
 </div>
 
-
+<h3 class="media-heading">Power Supply</h3>
+<hr>
 <div class="media">
   <!-- <div class="media-left media-top"> -->
     <a href="#">
@@ -205,7 +213,6 @@
     </a>
   <!-- </div> -->
   <div class="media-body">
-    <h3 class="media-heading">Power Supply</h3>
     <ul>
       <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
       <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
