--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -37,23 +37,26 @@
 <h3>Model 7942G</h3>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
-<div class="media">
-  <!-- <div class="media-left media-top"> -->
+<div class="row">
+  <div class="col-md-4">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg" style="max-width: 20.00%">
+    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg">
     </a>
-  <!-- </div> -->
-  <div class="media-body">   
-      <ul>
-        <li>Two-line set</li>
-        <li>Hands free speakerphone</li>
-        <li>Large LCD display</li>
-        <li>Headset jack</li>
-        <li>Volume control</li>
-        <li>Message waiting light</li>
-      </ul>
   </div>
+  <div class="col-md-4">
+    <ul>
+      <li>Two-line set</li>
+      <li>Hands free speakerphone</li>
+      <li>Large LCD display</li>
+      <li>Headset jack</li>
+      <li>Volume control</li>
+      <li>Message waiting light</li>
+    </ul>
+  </div>
+  <div class="col-md-4">&nbsp;</div>
 </div>
+
+
 
 <h3>Model 7945G</h3>
 <hr>
