--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -40,7 +40,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>Two-line set</li>
       <li>Hands free speakerphone</li>
@@ -50,7 +50,6 @@
       <li>Message waiting light</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3>Model 7945G</h3>
@@ -60,7 +59,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
       <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
@@ -68,7 +67,6 @@
       <li>Gigabit Ethernet connectivity</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3>Model 7962G</h3>
@@ -78,7 +76,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>Six-line set</li>
       <li>Hands free speakerphone</li>
@@ -88,7 +86,6 @@
       <li>Message waiting light</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>  
 
 <h3>Model 7965G</h3>
@@ -98,7 +95,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd58-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
       <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
@@ -106,7 +103,6 @@
       <li>Gigabit Ethernet connectivity</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3>Cisco Unified IP Conference Phone 8831</h3>
@@ -116,7 +112,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.doc/_jcr_content/renditions/data_sheet_c78-726887_0.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>Hands free speakerphone</li>
       <li>Full duplex</li>
@@ -128,7 +124,6 @@
       <li>1 Year Warranty</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3>Handset Cord</h3>
@@ -137,7 +132,7 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset_cord.png">
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>2 FT Coiled 12 Ft Uncoiled</li>
       <li>RJ22</li>
@@ -147,7 +142,6 @@
       <li>Medium Gray</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3>Model 7914 Expansion Module</h3>
@@ -156,7 +150,7 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/7914_expansion.png">
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
       <li>Includes new base and power cord</li>
@@ -164,7 +158,6 @@
       <li>Model 7937 must be ordered from the vendor</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3>Linksys SE1500 5 Port Fast Ethernet Switch</h3>
@@ -173,14 +166,13 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/se1500.png">
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
       <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
       <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3>Cisco Unified Wideband Handset</h3>
@@ -189,13 +181,12 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset.png">
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
       <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
     </ul>
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 <h3 class="media-heading">Power Supply</h3>
@@ -204,13 +195,12 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/power_supply.png">
   </div>
-  <div class="col-md-4" "col-sm-4">
+  <div class="col-md-4" "col-sm-4" "pull-right">
     <ul>
       <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
       <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
     </ul> 
   </div>
-  <div class="col-md-6" "col-sm-6">&nbsp;</div>
 </div>
 
 
