fix table column alignment

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -10,6 +10,7 @@
   <style>
   h2 { padding-top: 30px; }
   h3 { padding-top: 20px; }
+  tr td:first-child + td { text-align:right; }
   </style>
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
