--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -11,6 +11,7 @@
   h2 { padding-top: 30px; }
   h3 { padding-top: 20px; }
   tr td:first-child + td { text-align:right; }
+  tr th:first-child + th { text-align:right; }
   </style>
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -41,7 +42,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>Two-line set</li>
       <li>Hands free speakerphone</li>
@@ -60,7 +61,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
       <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
@@ -77,7 +78,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>Six-line set</li>
       <li>Hands free speakerphone</li>
@@ -96,7 +97,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd58-1.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
       <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
@@ -113,7 +114,7 @@
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.doc/_jcr_content/renditions/data_sheet_c78-726887_0.jpg"></a>
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>Hands free speakerphone</li>
       <li>Full duplex</li>
@@ -133,7 +134,7 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset_cord.png">
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>2 FT Coiled 12 Ft Uncoiled</li>
       <li>RJ22</li>
@@ -151,7 +152,7 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/7914_expansion.png">
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
       <li>Includes new base and power cord</li>
@@ -167,7 +168,7 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/se1500.png">
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
       <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
@@ -182,7 +183,7 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset.png">
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
       <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
@@ -196,7 +197,7 @@
   <div class="col-md-2" "col-sm-2">
     <img class="pull-left img-responsive" class="media-object" src="/images/tso/power_supply.png">
   </div>
-  <div class="col-md-4" "col-sm-4" "pull-right">
+  <div class="col-md-10" "col-sm-10" "pull-right">
     <ul>
       <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
       <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
