--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -37,22 +37,16 @@
 <h3>Model 7942G</h3>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a>
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>Two-line set</li>
-      <li>Hands free speakerphone</li>
-      <li>Large LCD display</li>
-      <li>Headset jack</li>
-      <li>Volume control</li>
-      <li>Message waiting light</li>
-    </ul>
-  </div>
-</div>
+<ul>
+  <li> <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
+    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></li>
+  <li>Two-line set</li>
+  <li>Hands free speakerphone</li>
+  <li>Large LCD display</li>
+  <li>Headset jack</li>
+  <li>Volume control</li>
+  <li>Message waiting light</li>
+</ul>
 
 <h3>Model 7945G</h3>
 <hr>
@@ -74,7 +68,7 @@
 <h3>Model 7962G</h3>
 <hr>
 <div class="row">
-  <div class="col-md-2" "col-sm-2">
+  <div class="col-md-2" "col-sm-12">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a>
   </div>
@@ -93,7 +87,7 @@
 <h3>Model 7965G</h3>
 <hr>
 <div class="row">
-  <div class="col-md-2" "col-sm-2">
+  <div class="col-md-2" "col-sm-12">
     <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
     <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd58-1.jpg"></a>
   </div>
@@ -146,7 +140,7 @@
   </div>
 </div>
 
-<h3>Model 7914 Expansion Module</h3>
+<h3>Expansion Module</h3>
 <hr>
 <div class="row">
   <div class="col-md-2" "col-sm-2">
@@ -156,8 +150,8 @@
     <ul>
       <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
       <li>Includes new base and power cord</li>
-      <li>Up to two expansion modules can be added to a 7960</li>
-      <li>Model 7937 must be ordered from the vendor</li>
+      <li>Up to two expansion modules can be added</li>
+      <li>Must be ordered from the vendor</li>
     </ul>
   </div>
 </div>
@@ -382,6 +376,14 @@
   <tr>
     <td>Handset Cord</td>
     <td>$3.99</td>
+  </tr>
+  <tr>
+    <td>Handset</td>
+    <td>$25.00</td>
+  </tr>
+  <tr>
+    <td>Expansion Module</td>
+    <td>Contact vendor</td>
   </tr>
   <tr>
     <td>Linksys SE1500 5 port switch</td>
