more with images

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -37,9 +37,11 @@
 <h3>Model 7942G</h3>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
+
+<a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
+<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></li>
+
 <ul>
-  <li> <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></li>
   <li>Two-line set</li>
   <li>Hands free speakerphone</li>
   <li>Large LCD display</li>
