--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -12,6 +12,8 @@
   h3 { padding-top: 20px; }
   tr td:first-child + td { text-align:right; }
   tr th:first-child + th { text-align:right; }
+  #desc { float: right;}
+  #cat_image { float: left;}
   </style>
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -37,9 +39,8 @@
 <h3>Model 7942G</h3>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
-
-<a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></li>
+<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
+<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p>
 
 <ul>
   <li>Two-line set</li>
@@ -52,39 +53,29 @@
 
 <h3>Model 7945G</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
-    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a>
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
-      <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
-      <li>Improved navigation cluster for easier navigation and feature and function selection</li>
-      <li>Gigabit Ethernet connectivity</li>
-    </ul>
-  </div>
-</div>
+<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
+<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p>
+
+<ul>
+  <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
+  <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
+  <li>Improved navigation cluster for easier navigation and feature and function selection</li>
+  <li>Gigabit Ethernet connectivity</li>
+</ul>
 
 <h3>Model 7962G</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-12">
-    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
-    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a>
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>Six-line set</li>
-      <li>Hands free speakerphone</li>
-      <li>Large LCD display</li>
-      <li>Headset jack</li>
-      <li>Volume control</li>
-      <li>Message waiting light</li>
-    </ul>
-  </div>
-</div>  
+<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
+<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a></p>
+
+<ul>
+  <li>Six-line set</li>
+  <li>Hands free speakerphone</li>
+  <li>Large LCD display</li>
+  <li>Headset jack</li>
+  <li>Volume control</li>
+  <li>Message waiting light</li>
+</ul>
 
 <h3>Model 7965G</h3>
 <hr>
