remove divs because t4 sucks

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -12,8 +12,6 @@
   h3 { padding-top: 20px; }
   tr td:first-child + td { text-align:right; }
   tr th:first-child + th { text-align:right; }
-  #desc { float: right;}
-  #cat_image { float: left;}
   </style>
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -40,21 +38,21 @@
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
 <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p>
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p>
 
-<ul>
+<p><ul>
   <li>Two-line set</li>
   <li>Hands free speakerphone</li>
   <li>Large LCD display</li>
   <li>Headset jack</li>
   <li>Volume control</li>
   <li>Message waiting light</li>
-</ul>
+</ul></p>
 
 <h3>Model 7945G</h3>
 <hr>
 <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
-<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p>
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p>
 
 <ul>
   <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
@@ -66,16 +64,16 @@
 <h3>Model 7962G</h3>
 <hr>
 <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
-<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a></p>
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a></p>
 
-<ul>
+<p><ul>
   <li>Six-line set</li>
   <li>Hands free speakerphone</li>
   <li>Large LCD display</li>
   <li>Headset jack</li>
   <li>Volume control</li>
   <li>Message waiting light</li>
-</ul>
+</ul></p>
 
 <h3>Model 7965G</h3>
 <hr>
